client/src/App.css
body {
  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
  background: #f4f3f2;
  margin: 0;
  padding: 2rem;
}

h1 {
  margin-bottom: 1.5rem;
  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
}

p {
  margin-bottom: 5px;
}

div {
  box-sizing: border-box;
}
.book-list {
  display: flex;
  justify-content: center;
  gap: 1rem;
  flex-wrap: wrap;
}
.book-form {
  max-width: 450px;
  margin: 30px auto;
  padding: 20px;
  border-radius: 12px;
  background: white;
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
}

/* Row for title + author */
.row {
  display: flex;
  gap: 10px;
}

/* Each field */
.form-group {
  display: flex;
  flex-direction: column;
  flex: 1;
  margin-bottom: 15px;
}

/* Labels */
.form-group label {
  margin-bottom: 5px;
  font-weight: 600;
}

.form-group input {
  padding: 10px;
  border-radius: 8px;
  border: 1px solid #ccc;
}

.stars-container {
  text-align: center;
  margin: 10px 0;
}

.book-form button {
  width: 100%;
  padding: 10px;
  border-radius: 8px;
  border: none;
  background: #53bda5;
  color: white;
  font-weight: bold;
  cursor: pointer;
}

.book-form button:hover {
  background: #437a6d;
}

.stars {
  padding-bottom: 10px;
}
.book-card {
  background: white;
  border-radius: 12px;
  padding: 1rem;
  margin-bottom: 1rem;
  max-width: 400px;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
  width: 250px;
  height: auto;
}

button {
  margin-right: 0.4rem;
  padding: 0.4rem 0.7rem;
  cursor: pointer;
}
.stars {
  display: flex;
  justify-content: center;
  gap: 5px;
  margin-top: 8px;
}
.star {
  font-size: 22px;
  cursor: pointer;
  color: #ccc;
  transition: 0.2s;
}

.star.active {
  color: #d49137;
}
.star:hover {
  transform: scale(1.2);
}
.deleteButton {
  position: relative;
  width: 50px;
  height: 50px;
  border-radius: 25px;
  border: 2px solid rgb(231, 50, 50);
  background-color: #fff;
  cursor: pointer;
  box-shadow: 0 0 6px #333;
  overflow: hidden;
  transition: 0.3s;
}

button:hover {
  background-color: rgb(245, 207, 207);
  transform: scale(1.2);
  box-shadow: 0 0 2px #111;
  transition: 0.3s;
}
svg {
  color: rgb(231, 50, 50);
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  transition: 0.3s;
}

button:focus svg {
  opacity: 0;
  transition: 0.3s;
}

.deleteButton span {
  width: 150px;
  position: absolute;
  opacity: 0;
  transform: translate(-50%, -50%);
  color: rgb(231, 50, 50);
  font-weight: 600;
  transition: 0.3s;
}

button:focus {
  width: 150px;
  height: 50px;
  transition: 0.3s;
}

button:focus span {
  opacity: 1;
  transition: 0.3s;
}

